header buttons fixed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       name="description"
       content="Tuyo México apoya al talento local y explora latinoamérica"
     />
-    <meta name="author" content="TUYO LATAM" />
+    <meta name="author" content="TUYO LATAM by Anailek" />
     <title>TUYO | LATAM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
@@ -37,8 +37,8 @@
       </div>
       <div class="container-nav">
         <div class="container-button">
-          <button class="button-primary shadow-none">Nosotros</button>
-          <button class="button-primary">Ingresar</button>
+          <button class="button-primary">Home</button>
+          <button class="button-primary">Contacto</button>
         </div>
       </div>
     </nav>
@@ -148,37 +148,37 @@
                 ><img class="img-fluid" src="assets/img/coyoacan.jpg"
               /></a>
             </div>
-            <div class="col-sm-6 col-md-4 col-lg-3 item">
+            <!-- <div class="col-sm-6 col-md-4 col-lg-3 item">
               <a href="assets/img/beso.jpg" data-lightbox="photos"
                 ><img class="img-fluid" src="assets/img/beso.jpg"
               /></a>
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-3 item">
+            </div> -->
+            <!-- <div class="col-sm-6 col-md-4 col-lg-3 item">
               <a href="assets/img/colores.jpg" data-lightbox="photos"
                 ><img class="img-fluid" src="assets/img/colores.jpg"
               /></a>
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-3 item">
+            </div> -->
+            <!-- <div class="col-sm-6 col-md-4 col-lg-3 item">
               <a href="assets/img/cita-edgar-zuñiga.jpg" data-lightbox="photos"
                 ><img class="img-fluid" src="assets/img/cita-edgar-zuñiga.jpg"
               /></a>
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-3 item">
+            </div> -->
+            <!-- <div class="col-sm-6 col-md-4 col-lg-3 item">
               <a href="assets/img/baile.jpg" data-lightbox="photos"
                 ><img class="img-fluid" src="assets/img/baile.jpg"
               /></a>
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-3 item">
+            </div> -->
+            <!-- <div class="col-sm-6 col-md-4 col-lg-3 item">
               <a href="assets/img/trajineras-2.jpg" data-lightbox="photos"
                 ><img class="img-fluid" src="assets/img/trajineras-2.jpg"
               /></a>
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-3 item">
+            </div> -->
+            <!-- <div class="col-sm-6 col-md-4 col-lg-3 item">
               <a href="assets/img/trajineras.jpg" data-lightbox="photos"
                 ><img class="img-fluid" src="assets/img/trajineras.jpg"
               /></a>
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-3 item">
+            </div> -->
+            <!-- <div class="col-sm-6 col-md-4 col-lg-3 item">
               <a
                 href="assets/img/san-jose-ulises-gomez.jpeg"
                 data-lightbox="photos"
@@ -186,8 +186,8 @@
                   class="img-fluid"
                   src="assets/img/san-jose-ulises-gomez.jpeg"
               /></a>
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-3 item">
+            </div> -->
+            <!-- <div class="col-sm-6 col-md-4 col-lg-3 item">
               <a
                 href="assets/img/sunset-ulises-gomez.jpeg"
                 data-lightbox="photos"
@@ -195,8 +195,8 @@
                   class="img-fluid"
                   src="assets/img/sunset-ulises-gomez.jpeg"
               /></a>
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-3 item">
+            </div> -->
+            <!-- <div class="col-sm-6 col-md-4 col-lg-3 item">
               <a
                 href="assets/img/bacalar-sergio-ruiz.jpg"
                 data-lightbox="photos"
@@ -204,8 +204,8 @@
                   class="img-fluid"
                   src="assets/img/bacalar-sergio-ruiz.jpg"
               /></a>
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-3 item">
+            </div> -->
+            <!-- <div class="col-sm-6 col-md-4 col-lg-3 item">
               <a
                 href="assets/img/viñedos-sergio-ruiz.jpg"
                 data-lightbox="photos"
@@ -213,13 +213,13 @@
                   class="img-fluid"
                   src="assets/img/viñedos-sergio-ruiz.jpg"
               /></a>
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-3 item">
+            </div> -->
+            <!-- <div class="col-sm-6 col-md-4 col-lg-3 item">
               <a href="assets/img/casa-rosada-sergio.jpg" data-lightbox="photos"
                 ><img class="img-fluid" src="assets/img/casa-rosada-sergio.jpg"
               /></a>
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-3 item">
+            </div> -->
+            <!-- <div class="col-sm-6 col-md-4 col-lg-3 item">
               <a
                 href="assets/img/Hongos alucinogenos.jpg"
                 data-lightbox="photos"
@@ -227,7 +227,7 @@
                   class="img-fluid"
                   src="assets/img/Hongos alucinogenos.jpg"
               /></a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
