--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="container-nav">
         <div class="container-button">
           <button class="button-primary">Home</button>
-          <button class="button-primary">Contacto</button>
+          <button class="button-primary">Contact</button>
         </div>
       </div>
     </nav>
@@ -50,7 +50,7 @@
             <div class="text-center text-white">
               <!-- Page heading-->
               <h1 class="mb-5">
-                Un toque de color, alegría y sobre todo personas: TUYO
+                descubre México con TUYO
               </h1>
             </div>
           </div>
@@ -70,10 +70,10 @@
                   src="assets/img/mexico.png"
                 />
               </div>
-              <h3>Cultura</h3>
-              <p class="lead mb-0">
+              <h3>Aterriza en cualquier zona de México</h3>
+              <!-- <p class="lead mb-0">
                 Descubrir aquello que no conocemos, seguramente es fascinante.
-              </p>
+              </p> -->
             </div>
           </div>
           <div class="col-lg-4">
@@ -85,10 +85,10 @@
                   src="assets/img/camara.png"
                 />
               </div>
-              <h3>Talento</h3>
-              <p class="lead mb-0">
+              <h3>Descubre sitios con nuestros embajadores locales</h3>
+              <!-- <p class="lead mb-0">
                 Nuestra misión es dar apoyo al talento local.
-              </p>
+              </p> -->
             </div>
           </div>
           <div class="col-lg-4">
@@ -100,8 +100,8 @@
                   src="assets/img/comunidad.png"
                 />
               </div>
-              <h3>Comunidad</h3>
-              <p class="lead mb-0">¡Forma parte de nuestra comunidad!</p>
+              <h3>Vive la experiencia en comunidad</h3>
+              <!-- <p class="lead mb-0">¡Forma parte de nuestra comunidad!</p> -->
             </div>
           </div>
         </div>
