--- a/index.html
+++ b/index.html
@@ -126,26 +126,26 @@
           <div class="row photos">
             <div class="col-sm-6 col-md-4 col-lg-3 item">
               <a
-                href="assets/img/parque-mexico-edgar-z.jpg"
+                href="assets/img/colores.jpg"
                 data-lightbox="photos"
                 ><img
                   class="img-fluid"
-                  src="assets/img/parque-mexico-edgar-z.jpg"
+                  src="assets/img/colores.jpg"
               /></a>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item">
-              <a href="assets/img/barrio-chino.jpg" data-lightbox="photos"
-                ><img class="img-fluid" src="assets/img/barrio-chino.jpg"
+              <a href="assets/img/trajineras-2.jpg" data-lightbox="photos"
+                ><img class="img-fluid" src="assets/img/trajineras-2.jpg"
               /></a>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item">
-              <a href="assets/img/entrada.jpg" data-lightbox="photos"
-                ><img class="img-fluid" src="assets/img/entrada.jpg"
+              <a href="assets/img/bacalar-sergio-ruiz.jpg" data-lightbox="photos"
+                ><img class="img-fluid" src="assets/img/bacalar-sergio-ruiz.jpg"
               /></a>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item">
-              <a href="assets/img/coyoacan.jpg" data-lightbox="photos"
-                ><img class="img-fluid" src="assets/img/coyoacan.jpg"
+              <a href="assets/img/beso.jpg" data-lightbox="photos"
+                ><img class="img-fluid" src="assets/img/beso.jpg"
               /></a>
             </div>
             <!-- <div class="col-sm-6 col-md-4 col-lg-3 item">
