--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
           <div class="col-xl-6">
             <div class="text-center text-white">
               <!-- Page heading-->
-              <h1 class="mb-5">
-                descubre México con TUYO
-              </h1>
+              <h1 class="mb-5">descubre México con TUYO</h1>
             </div>
           </div>
         </div>
@@ -112,41 +110,29 @@
         <div class="container">
           <div class="intro">
             <h2 class="text-center">
-              Descubriendo México a través de los ojos locales
+              Descubre México desde los ojos locales
             </h2>
-            <p class="text-center-p">
+            <!-- <p class="text-center-p">
               "Tu viaje inicia cuando te adentras en la majestuosa sierra sur,
               <br />
               donde la vegetación se torna de encinos y ocotes, <br />
               paisajes que no se ven en cualquiera de las otras siete regiones
               de nuestro estado, <br />
               porque cada una es única."
-            </p>
+            </p> -->
           </div>
           <div class="row photos">
             <div class="col-sm-6 col-md-4 col-lg-3 item">
-              <a
-                href="assets/img/colores.jpg"
-                data-lightbox="photos"
-                ><img
-                  class="img-fluid"
-                  src="assets/img/colores.jpg"
-              /></a>
+              <img class="img-fluid" src="assets/img/colores.jpg" />
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item">
-              <a href="assets/img/trajineras-2.jpg" data-lightbox="photos"
-                ><img class="img-fluid" src="assets/img/trajineras-2.jpg"
-              /></a>
+              <img class="img-fluid" src="assets/img/trajineras-2.jpg" />
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item">
-              <a href="assets/img/bacalar-sergio-ruiz.jpg" data-lightbox="photos"
-                ><img class="img-fluid" src="assets/img/bacalar-sergio-ruiz.jpg"
-              /></a>
+              <img class="img-fluid" src="assets/img/bacalar-sergio-ruiz.jpg" />
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item">
-              <a href="assets/img/beso.jpg" data-lightbox="photos"
-                ><img class="img-fluid" src="assets/img/beso.jpg"
-              /></a>
+              <img class="img-fluid" src="assets/img/beso.jpg" />
             </div>
             <!-- <div class="col-sm-6 col-md-4 col-lg-3 item">
               <a href="assets/img/beso.jpg" data-lightbox="photos"
@@ -235,7 +221,7 @@
     <!-- Testimonials-->
     <section class="testimonials text-center">
       <div class="container">
-        <h2 class="mb-5">Nuestros talentos lo cuentan mejor :</h2>
+        <h2 class="mb-5">La comunidad te espera</h2>
         <div class="row">
           <div class="col-lg-4">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
@@ -245,10 +231,7 @@
                 alt="..."
               />
               <h5>Gabriela</h5>
-              <p class="font-weight-light mb-0">
-                "En TUYO el talento local es apoyado, y así mismo éste hace
-                brillar el destino que se está exponiendo."
-              </p>
+
             </div>
           </div>
           <div class="col-lg-4">
@@ -259,10 +242,7 @@
                 alt="..."
               />
               <h5>Ulises</h5>
-              <p class="font-weight-light mb-0">
-                “Ver caras, sonrisas, espíritus, ver realidades, alegría y
-                pasión, es cómo se ve México desde TUYO”.
-              </p>
+             
             </div>
           </div>
           <div class="col-lg-4">
@@ -273,10 +253,7 @@
                 alt="..."
               />
               <h5>Ariadna</h5>
-              <p class="font-weight-light mb-0">
-                "Lo que me gusta de TUYO es la visibilización y apoyo al talento
-                de fotógrafxs mexicanes!"
-              </p>
+           
             </div>
           </div>
         </div>
